# metascholar

./: README.md  pyproject.toml
metascholar/: __init__.py  cli.py
metascholar/analysis/: keywords.py  topics.py
metascholar/fetch/: semantic_scholar.py
metascholar/report/: build_report.py
metascholar/text/: preprocess.py
